--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"
+                        <a class="nav-link" href="https://github.com/SpyWolfNetwork/Smart_Contract_Audits/blob/main/December_2022/MetaTools_0x7adc29cec54b124a7E8E1B1415DFf95DDD13B173.pdf"
                             target="_blank">
                             Audit
                         </a>
@@ -527,7 +527,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#"
+                                <a href="https://github.com/SpyWolfNetwork/Smart_Contract_Audits/blob/main/December_2022/MetaTools_0x7adc29cec54b124a7E8E1B1415DFf95DDD13B173.pdf"
                                     target="_blank">
                                     Audit
                                 </a>
