--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                                     class="btn rounded-pill bg-blue4 fw-bold text-white me-4" target="_blank">
                                     <small> Join MetaTools Community</small>
                                 </a>
-                                <a href="#" data-lity class="play-btn">
+                                <a href="whitepaper.pdf" data-lity class="play-btn" target="_blank">
                                     <span class="icon me-2">
                                         <i class="fas fa-list ms-1"></i>
                                     </span>
