--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
                 </ul>
                 <div class="nav-side">
                     <div class="d-flex align-items-center">
-                        <a href="https://t.me/MetaToolsERC" target="_blank"
+                        <a href="https://dapp.metatools.tech" target="_blank"
                             class="btn rounded-pill brd-gray hover-blue4 sm-butn fw-bold">
-                            <span> Join Telegram <i class="bi bi-download ms-1"></i> </span>
+                            <span> Open Dapp </span>
                         </a>
                     </div>
                 </div>
@@ -164,16 +164,6 @@
                             <h1 class="mb-30"> MetaTools  <span></span> </h1>
                             <p class="text"> </p>
                             <div class="d-flex align-items-center mt-50">
-   <!--
-                                <a href="https://ico.twtzer.com/"
-                                    class="btn rounded-pill bg-blue4 fw-bold text-white me-4" target="_blank">
-                                
-                                    <small>
-                                        <i class="fab fa-discord me-2 pe-2 border-end"></i>   Presale Live
-                                    </small>-->
-                                </a>
-
-
 
                             </div>
                         </div>
