--- a/index.html
+++ b/index.html
@@ -301,6 +301,20 @@
         <!-- ====== end about ====== -->
 
 
+        <section class="community section-padding pt-0 style-4">
+            <div class="container">
+                <div class="section-head text-center style-4">
+                </div>
+                <center>
+                    <div class="nomics-ticker-widget" data-name="MetaToolsERC" data-base="METS" data-quote="USD"></div>
+                    <script src="https://widget.nomics.com/embed.js"></script>  
+                </center>
+                </div>
+            </div>
+        </section>
+
+
+
         <div class="section-head style-4" >
             <h2 class="mb-30" style="display: flex; justify-content: center;"><span> MetaTools Chart</span> </h2>
         </div>
