--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://voltichange.net/css/widget.css">
 <link rel="icon" type="image/x-icon" href="logo.png">
+	      <div class="u-clearfix u-custom-html u-expanded-width u-custom-html-1">
+        <iframe border="0" frameborder="0" height="36px" marginheight="0" marginwidth="0" scrolling="auto" src="https://widget.coinlib.io/widget?type=horizontal_v2&amp;theme=light&amp;pref_coin_id=1505&amp;invert_hover=no" style="border:0;margin:0;padding:0;" width="100%"></iframe>
+      </div>
   <section class="showcase">
     <header>
       <h2 class="logo">$METS</h2>
